--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     <p>Use WASD or arrow keys to fly. Hold right mouse to look around. Scroll to zoom.</p>
   </div>
   <div id="container"></div>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.154.0/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.154.0/examples/js/controls/FlyControls.js"></script>
-  <script src="main.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
 </html>
