--- a/index.html
+++ b/index.html
@@ -3,16 +3,237 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>3D Uranium Mine Tour</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Namibian Uranium Mine 3D Dashboard</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    :root {
+      --bg-dark: #23272f;
+      --bg-light: #f6f7fa;
+      --panel-dark: #181b20;
+      --panel-light: #ffffff;
+      --accent: #3ecf8e;
+      --text-dark: #f6f7fa;
+      --text-light: #23272f;
+      --shadow: 0 2px 16px rgba(0,0,0,0.12);
+    }
+    [data-theme="light"] {
+      --bg: var(--bg-light);
+      --panel: var(--panel-light);
+      --text: var(--text-light);
+    }
+    [data-theme="dark"] {
+      --bg: var(--bg-dark);
+      --panel: var(--panel-dark);
+      --text: var(--text-dark);
+    }
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      font-family: 'Inter', Arial, sans-serif;
+      background: var(--bg, #23272f);
+      color: var(--text, #f6f7fa);
+      transition: background 0.3s, color 0.3s;
+    }
+    body {
+      height: 100vh;
+      width: 100vw;
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+    }
+    .topbar {
+      height: 56px;
+      background: var(--panel, #181b20);
+      box-shadow: var(--shadow);
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0 24px;
+      z-index: 10;
+    }
+    .brand {
+      font-size: 1.3rem;
+      font-weight: 600;
+      letter-spacing: 1px;
+      color: var(--accent);
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+    .theme-switch {
+      background: none;
+      border: none;
+      color: var(--text);
+      font-size: 1.2rem;
+      cursor: pointer;
+      padding: 8px;
+      border-radius: 50%;
+      transition: background 0.2s;
+    }
+    .theme-switch:hover {
+      background: rgba(60, 207, 142, 0.1);
+    }
+    .main {
+      flex: 1;
+      display: flex;
+      height: calc(100vh - 56px);
+      min-height: 0;
+    }
+    .sidepanel {
+      width: 320px;
+      background: var(--panel, #181b20);
+      box-shadow: var(--shadow);
+      display: flex;
+      flex-direction: column;
+      padding: 24px 16px 16px 16px;
+      z-index: 2;
+      transition: background 0.3s;
+      min-width: 220px;
+      max-width: 90vw;
+    }
+    .sidepanel h2 {
+      font-size: 1.1rem;
+      font-weight: 600;
+      margin: 0 0 18px 0;
+      color: var(--accent);
+    }
+    .controls, .data-panel {
+      margin-bottom: 32px;
+    }
+    .controls label, .controls button, .controls select {
+      display: block;
+      margin-bottom: 12px;
+      font-size: 1rem;
+    }
+    .controls input[type="checkbox"] {
+      margin-right: 8px;
+    }
+    .data-panel {
+      font-size: 0.98rem;
+      background: rgba(60, 207, 142, 0.07);
+      border-radius: 8px;
+      padding: 12px 10px;
+      box-shadow: 0 1px 4px rgba(60,207,142,0.04);
+    }
+    .data-panel .data-row {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 8px;
+    }
+    .data-panel .data-label {
+      color: var(--accent);
+      font-weight: 600;
+    }
+    .viewport {
+      flex: 1;
+      position: relative;
+      background: var(--bg, #23272f);
+      min-width: 0;
+      min-height: 0;
+      overflow: hidden;
+      display: flex;
+      align-items: stretch;
+      justify-content: stretch;
+    }
+    #three-canvas {
+      width: 100%;
+      height: 100%;
+      display: block;
+      background: #222;
+    }
+    .tooltip {
+      position: absolute;
+      pointer-events: none;
+      background: rgba(30,30,40,0.95);
+      color: #fff;
+      padding: 10px 14px;
+      border-radius: 8px;
+      font-size: 1rem;
+      box-shadow: 0 2px 12px rgba(0,0,0,0.18);
+      z-index: 100;
+      min-width: 120px;
+      max-width: 320px;
+      display: none;
+    }
+    @media (max-width: 900px) {
+      .sidepanel { width: 180px; padding: 12px 6px; }
+      .main { flex-direction: column; }
+      .sidepanel { order: 2; width: 100vw; max-width: 100vw; }
+      .viewport { order: 1; }
+    }
+    @media (max-width: 600px) {
+      .topbar { padding: 0 8px; }
+      .sidepanel { padding: 8px 2px; }
+      .data-panel { font-size: 0.92rem; }
+    }
+  </style>
 </head>
-<body>
-  <div id="overlay">
-    <h1>3D Uranium Mine Tour</h1>
-    <div id="labels"></div>
-    <p>Use WASD or arrow keys to fly. Hold right mouse to look around. Scroll to zoom.</p>
+<body data-theme="dark">
+  <header class="topbar">
+    <div class="brand">
+      <svg width="28" height="28" viewBox="0 0 32 32" fill="none"><circle cx="16" cy="16" r="15" stroke="#3ecf8e" stroke-width="2"/><ellipse cx="16" cy="16" rx="10" ry="4" fill="#3ecf8e" fill-opacity="0.2"/></svg>
+      Namibian Uranium Mine 3D
+    </div>
+    <button class="theme-switch" id="themeSwitch" title="Toggle dark/light mode">
+      <svg id="themeIcon" width="22" height="22" viewBox="0 0 24 24" fill="none"><path d="M12 3v2m0 14v2m9-9h-2M5 12H3m15.364-6.364l-1.414 1.414M6.343 17.657l-1.414 1.414M17.657 17.657l-1.414-1.414M6.343 6.343L4.929 7.757" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
+    </button>
+  </header>
+  <div class="main">
+    <aside class="sidepanel">
+      <section class="controls">
+        <h2>Controls</h2>
+        <label><input type="checkbox" id="toggleTopsoil" checked>Topsoil</label>
+        <label><input type="checkbox" id="toggleOverburden" checked>Overburden</label>
+        <label><input type="checkbox" id="toggleOre" checked>Uranium Ore</label>
+        <label><input type="checkbox" id="toggleAquifer" checked>Aquifer</label>
+        <label><input type="checkbox" id="togglePipelines" checked>Leaching Pipelines</label>
+        <label><input type="checkbox" id="toggleTrucks" checked>Haul Trucks</label>
+        <label><input type="checkbox" id="toggleDrillRigs" checked>Drill Rigs</label>
+        <label><input type="checkbox" id="toggleStockpiles" checked>Ore Stockpiles</label>
+        <label for="miningMethod">Mining Method:</label>
+        <select id="miningMethod">
+          <option value="openpit">Open-Pit</option>
+          <option value="insitu">In-Situ Leach</option>
+        </select>
+      </section>
+      <section class="data-panel">
+        <h2>Mine Data</h2>
+        <div class="data-row"><span class="data-label">Depth:</span><span id="mineDepth">-- m</span></div>
+        <div class="data-row"><span class="data-label">Uranium Conc.:</span><span id="uraniumConc">-- ppm</span></div>
+        <div class="data-row"><span class="data-label">Impact:</span><span id="envImpact">--</span></div>
+      </section>
+      <button id="exportBtn" style="margin-top:auto;width:100%;background:var(--accent);color:#fff;border:none;padding:10px 0;border-radius:6px;font-weight:600;font-size:1rem;box-shadow:0 1px 6px rgba(60,207,142,0.12);cursor:pointer;">Export GLTF/GLB</button>
+    </aside>
+    <main class="viewport">
+      <canvas id="three-canvas"></canvas>
+      <div class="tooltip" id="tooltip"></div>
+    </main>
   </div>
-  <div id="container"></div>
-  <script type="module" src="main.js"></script>
+  <!-- Three.js Library -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/jsm/exporters/GLTFExporter.js"></script>
+  
+  <!-- Main Application Script -->
+  <script src="main.js"></script>
+  
+  <script>
+    // Theme switcher logic
+    const themeSwitch = document.getElementById('themeSwitch');
+    const themeIcon = document.getElementById('themeIcon');
+    function setTheme(theme) {
+      document.body.setAttribute('data-theme', theme);
+      if (theme === 'dark') {
+        themeIcon.innerHTML = '<path d="M12 3v2m0 14v2m9-9h-2M5 12H3m15.364-6.364l-1.414 1.414M6.343 17.657l-1.414 1.414M17.657 17.657l-1.414-1.414M6.343 6.343L4.929 7.757" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>';
+      } else {
+        themeIcon.innerHTML = '<circle cx="12" cy="12" r="5" stroke="currentColor" stroke-width="2" fill="none"/><path d="M12 1v2m0 18v2m11-11h-2M5 12H3m16.95-6.95l-1.414 1.414M6.343 17.657l-1.414 1.414M17.657 17.657l-1.414-1.414M6.343 6.343L4.929 7.757" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>';
+      }
+    }
+    themeSwitch.onclick = () => {
+      const current = document.body.getAttribute('data-theme');
+      setTheme(current === 'dark' ? 'light' : 'dark');
+    };
+    setTheme('dark');
+  </script>
 </body>
 </html>
